--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../less/style.css">
-  <link rel="stylesheet" href="../css/style.css.map">
-  <link rel="stylesheet/less" href="../less/style.less">
+  <link rel="stylesheet" href="less/style.css">
+  <link rel="stylesheet" href="css/style.css.map">
+  <link rel="stylesheet/less" href="less/style.less">
 </head>
 
 <body class="page__body">
